# beerus

./:    .all-contributorsrc  .dockerignore  .gitignore  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  _typos.toml  beerusup  docker-compose.yml  docker_logs.txt  dummy.txt  e2e-tests.sh  package.json  rust-toolchain.toml  rustfmt.toml  summary.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  02_FEATURE_REQUEST.md  BUG.md  bug.md  bug_report.md  config.yml
.github/workflows/: account_deployment.yml  book.yml  bot.yml  check.yml  ci.yml  hurl-integration-tests.yml  labels.yml  lock.yml  mdbook.yml  release.yml  rust-integration-tests-alchemy.yml  (+5 more)
beerus-json-rpc/: Cargo.toml
beerus-json-rpc/src/: lib.rs  main.rs
beerus-rpc/: Cargo.toml
beerus_cli/: Cargo.toml
beerus_cli/src/: lib.rs  main.rs  model.rs  runner.rs
beerus_cli/src/ethereum/: mod.rs
beerus_cli/src/starknet/: mod.rs
beerus_cli/tests/: cli.rs  cli_ethereum.rs  cli_starknet.rs  model.rs
beerus_core/: Cargo.toml
beerus_core/src/: config.rs  ethers_helper.rs  lib.rs  starknet_helper.rs  with_std.rs  without_std.rs
beerus_core/src/lightclient/: beerus.rs
beerus_core/src/lightclient/ethereum/: ethereum.rs  helios.rs  helios_lightclient.rs  mod.rs
beerus_core/src/lightclient/starknet/: mod.rs  storage_proof.rs
beerus_core/tests/: beerus.rs  beerus_ethereum.rs  beerus_starknet.rs  config.rs  data.json  integration.rs  lightclients.rs  proofs.rs  starknet_proofs.rs
beerus_rest_api/: Cargo.toml  Rocket.toml
beerus_rest_api/src/: lib.rs  main.rs
beerus_rest_api/src/api/: mod.rs
beerus_rest_api/src/api/docs/: openrpc.yaml
beerus_rest_api/src/api/ethereum/: endpoints.rs  ethereum_api.rs  mod.rs
beerus_rest_api/src/api/ethereum/resp/: mod.rs
beerus_rest_api/src/api/starknet/: endpoints.rs  mod.rs  starknet_api.rs
beerus_rest_api/src/api/starknet/resp/: mod.rs
beerus_rest_api/tests/: api.rs  api_ethereum.rs  api_starknet.rs
book/: LANGUAGES  README.md  TRANSLATIONS.md  book.toml  build.sh  translate.sh  translations.sh
cli/: Cargo.toml
core/: Cargo.toml
crates/beerus-cli/: Cargo.toml  README.md
crates/beerus-cli/src/: lib.rs  main.rs  model.rs  runner.rs
crates/beerus-cli/src/ethereum/: mod.rs
crates/beerus-cli/src/starknet/: mod.rs
crates/beerus-cli/tests/: cli.rs  model.rs
crates/beerus-core/: Cargo.toml
crates/beerus-core/examples/: basic.rs  call.rs  client.rs
crates/beerus-core/src/: config.rs  ethers_helper.rs  lib.rs  starknet_helper.rs  with_alloc.rs  with_std.rs  without_std.rs
crates/beerus-core/src/lightclient/: beerus.rs  mod.rs
crates/beerus-core/src/lightclient/ethereum/: helios_lightclient.rs  mod.rs
crates/beerus-core/src/lightclient/starknet/: errors.rs  mod.rs  storage_proof.rs
crates/beerus-core/src/resources/: starknet_core_abi.json
crates/beerus-core/tests/: beerus.rs  config.rs  ethers_helper.rs  helios_lightclient.rs  integration.rs  proofs.rs
crates/beerus-core/tests/common/: mod.rs
crates/beerus-core/tests/common/data/: goerli.toml
crates/beerus-core/tests/data/: goerli.toml  mainnet.toml
crates/beerus-js/: Cargo.toml  package.json  run.sh  webpack.config.js
crates/beerus-js/src/: lib.rs
crates/beerus-rpc/: Cargo.toml
crates/beerus-rpc/example_rpc_calls/: l2_to_l1_messages.hurl  stark_blockNumber.hurl  stark_blockWithTxHashes.hurl  stark_getBlockWithTxs.hurl  starknet_blockNumber.hurl  starknet_getBlockWithTxHashes.hurl  starknet_getNonce.hurl  starknet_getTransactionReceipt.hurl  starknet_get_estimate_fee.hurl  starknet_starknet_getStateUpdate.hurl
crates/beerus-rpc/src/: api.rs  beerus_rpc_server.rs  errors.rs  lib.rs  main.rs  models.rs  server.rs  utils.rs
crates/beerus-rpc/src/utils/: wiremock.rs
crates/beerus-rpc/src/utils/data/blocks/: starknet_blockNumber.json  starknet_getBlockTransactionCount.json  starknet_get_estimate_fee.json
crates/beerus-rpc/tests/: rpc.rs  utils.rs
crates/beerus-rpc/tests/common/: mod.rs
crates/beerus-rpc/tests/common/data/: starknet_addInvokeTransaction.json  starknet_blockHashAndNumber.json  starknet_call.json  starknet_getBlockWithTxHashes.json  starknet_getEstimateFee.json  starknet_getEvents.json  starknet_getTransactionByBlockIdAndIndex.json  starknet_syncing.json  test.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/examples/: basic.rs  call.rs
crates/core/src/: client.rs  config.rs  lib.rs  public.rs  utils.rs
crates/core/src/block_hash/: merkle_tree.rs  mod.rs
crates/core/src/storage_proofs/: mod.rs  types.rs
crates/core/tests/: block_hash.rs  config.rs  proofs.rs  retry.rs
crates/core/tests/common/: mod.rs
crates/core/tests/common/data/: bad.toml  goerli.json  mainnet.toml  proof.json
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: common.rs  generic.rs  lib.rs  mainnet.rs  suites.rs
crates/integration-tests/src/suites/: generic.rs  mainnet.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: api.rs  error.rs  lib.rs
crates/rpc/tests/: mod.rs  rpc.rs
crates/rpc/tests/common/: helper.rs  mod.rs
crates/rpc/tests/common/data/: beerus.json  starknet_getEstimateFee.json
doc/: architecture.md  coverage.html  coverage.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
examples/: .env.example  basic.rs  call.rs  client.rs  server.rs  state.rs
examples/core/: Cargo.toml  basic.rs  call.rs  client.rs  req.rs
examples/wasm/: Cargo.toml  lib.js  run.sh
examples/wasm/src/: lib.rs
rest_api/: Cargo.toml
scripts/: docker-compose.yml  integration-test.sh  wait-for-it.sh
src/: client.rs  config.rs  eth.rs  feeder.rs  gen.rs  lib.rs  main.rs  proof.rs  rpc.rs  util.rs  web.rs
tests/: account.rs  account_declaration.rs  account_declare.rs  account_katana.rs  account_mock.rs  exe.rs  rpc.rs  test_beerus.rs
web/: README.md  app.js  index.html  package-lock.json  package.json  run.sh  style.css  wrk.js
web/beerus-web/: ._target  Cargo.toml
web/beerus-web/src/: lib.rs
(+343 files in other folders)
