[package]
description = "Light client for Starknet"
edition = "2021"
name = "beerus"
version = "0.5.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["rpc", "blockifier"]
rpc = ["dep:axum"]
blockifier = ["dep:blockifier", "dep:cairo-vm", "dep:ureq"]

## FOR TESTING ONLY
## skip proof validation of state root is 0x0
skip-zero-root-validation = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.81"
## Tokio WASM support: https://docs.rs/tokio/latest/tokio/#wasm-support
tokio = { version = "1", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
eyre = "0.6.12"
starknet = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
thiserror = "1.0.63"
axum = { version = "0.7.5", optional = true }
iamgroot = { git = "https://github.com/sergey-melnychuk/iamgroot", tag = "v0.2.8" }
regex = "1.10.6"
once_cell = "1.19.0"

# There is a bug in ethers so we should pin its version
# to the exact version that Helios is using
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "3bf1a9e0d698e9fdfc91d0353878901af5a5c5ef" }
helios = { git = "https://github.com/a16z/helios", rev = "1572a24" }

starknet-crypto = "0.6.2"
blockifier = { version = "0.5.0", optional = true }
starknet_api = "0.10.0"
cairo-vm = { version = "0.9.3", optional = true }

base64 = "0.22.0"
flate2 = "1.0.28"
cairo-lang-starknet-classes = "2.6.4"
ureq = { version = "2.10.0", features = ["json"], optional = true }

hex = "0.4.3"
bitvec = "1.0.1"
validator = { version = "0.18.1", features = ["derive"] }
url = "2.5.1"
toml = "0.8.19"
clap = { version = "4.5.13", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.37"
reqwest = { version = "0.12.3", default-features = false, features = [
    "json",
    "blocking",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.3", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
