[package]
description = "Light client for Starknet"
edition = "2021"
name = "beerus"
version = "0.5.1"

[features]
default = ["rpc"]
rpc = ["dep:axum"]

## FOR TESTING ONLY
## skip proof validation of state root is 0x0
skip-zero-root-validation = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.82"
reqwest = { version = "0.12.3", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
## Tokio WASM support: https://docs.rs/tokio/latest/tokio/#wasm-support
tokio = { version = "1", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
eyre = "0.6.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
thiserror = "1.0.63"
axum = { version = "0.7.5", optional = true }
iamgroot = { git = "https://github.com/sergey-melnychuk/iamgroot", tag = "v0.2.8" }
regex = "1.10.6"
once_cell = "1.19.0"

# There is a bug in ethers so we should pin its version
# to the exact version that Helios is using
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "3bf1a9e0d698e9fdfc91d0353878901af5a5c5ef" }
helios = { git = "https://github.com/a16z/helios", rev = "1572a24" }

starknet-crypto = "0.7.1"
blockifier = "=0.8.0-rc.2"
starknet_api = "0.13.0-rc.1"
cairo-vm = "=1.0.1"
starknet-types-core = "0.1.5"
cairo-lang-starknet-classes = "2.6.4"

base64 = "0.22.0"
flate2 = "1.0.28"
ureq = { version = "2.10.0", features = ["json"] }
hex = "0.4.3"
bitvec = "1.0.1"
validator = { version = "0.18.1", features = ["derive"] }
url = "2.5.1"
toml = "0.8.19"
clap = { version = "4.5.13", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.86"
alloy-primitives = { version = "0.7.6", default-features = false }
katana-core = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-executor = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-node = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-primitives = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-rpc = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-rpc-api = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
wiremock = "0.6.1"

[patch.crates-io]
starknet-core = { git = "https://github.com/kariy/starknet-rs", branch = "dojo-patch" }
