[package]
description = "Light client for Starknet"
edition = "2021"
name = "beerus"
version = "0.6.1"
repository = "https://github.com/eigerco/beerus"
license = "MIT"

[features]
default = ["rpc"]
rpc = ["dep:axum"]
testing = []

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.82"
## Tokio WASM support: https://docs.rs/tokio/latest/tokio/#wasm-support
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
eyre = "0.6.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
thiserror = "1.0.63"
axum = { version = "0.7.7", optional = true }
iamgroot = { git = "https://github.com/sergey-melnychuk/iamgroot", tag = "v0.2.8" }
regex = "1.10.6"
once_cell = "1.16.0-pre.1"

# There is a bug in ethers so we should pin its version
# to the exact version that Helios is using
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "3bf1a9e0d698e9fdfc91d0353878901af5a5c5ef" }

starknet-types-core = "0.1.5"
starknet-crypto = "0.7.1"

base64 = "0.22.0"
flate2 = "1.0.28"
hex = "0.4.3"
bitvec = "1.0.1"
validator = { version = "0.18.1", features = ["derive"] }
url = "2.5.1"
toml = "0.8.19"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blockifier = { git = "https://github.com/sergey-melnychuk/sequencer.git", tag = "beerus-wasm-2024-09-22", version = "=0.8.0-rc.2", features = ["cairo-vm-std"] }
starknet_api = { git = "https://github.com/sergey-melnychuk/sequencer.git", tag = "beerus-wasm-2024-09-22", version = "0.13.0-rc.1", features = ["cairo-vm-std"] }
cairo-lang-starknet-classes = { git = "https://github.com/sergey-melnychuk/cairo.git", tag = "beerus-wasm-2024-09-22" }

helios = { git = "https://github.com/sergey-melnychuk/helios", branch = "beerus-wasm" }
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
ureq = { version = "2.10.1", features = ["json"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
blockifier = { git = "https://github.com/sergey-melnychuk/sequencer.git", tag = "beerus-wasm-2024-09-22", version = "=0.8.0-rc.2" }
starknet_api = { git = "https://github.com/sergey-melnychuk/sequencer.git", tag = "beerus-wasm-2024-09-22", version = "0.13.0-rc.1" }
cairo-lang-starknet-classes = { git = "https://github.com/sergey-melnychuk/cairo.git", tag = "beerus-wasm-2024-09-22" }

helios = { git = "https://github.com/sergey-melnychuk/helios", branch = "beerus-wasm", default-features = false, features = ["beerus-wasm"] }
reqwest = { version = "0.12.3", default-features = false, features = ["json"] }

gloo-timers = { version = "0.3.0", features = ["futures"] }


[dev-dependencies]
anyhow = "1.0.89"
alloy-primitives = { version = "0.8.5", default-features = false }
katana-core = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-executor = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-node = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-primitives = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-rpc = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
katana-rpc-api = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
wiremock = "0.6.2"

[patch.crates-io]
starknet-core = { git = "https://github.com/kariy/starknet-rs", branch = "dojo-patch" }
