[package]
name = "beerus-json-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rpc
beerus_core = { path = "../beerus_core" }
helios = { git = "https://github.com/a16z/helios" }
ethers = "1.0.2"
primitive-types = "0.11.1"
jsonrpsee = { version = "^0.16", features = ["full"] }
eyre = "0.6.5"
thiserror = "1.0.26"
dotenv = "0.15.0"
tokio = { version = "1.8.1", features = ["full"] }
log = "0.4.14"
serde_json = "1.0.64"
env_logger = "0.10.0"
