[package]
name = "beerus_cli"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
beerus_core = { path = "../beerus_core" }
helios = { git = "https://github.com/a16z/helios" }
ethers = "1.0.2"
primitive-types = "0.11.1"
eyre = "0.6.8"
clap = { version = "4.0.22", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros"] }
log = "0.4.17"
env_logger = "0.10.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
serde_json = "1.0.91"
base64 = "0.20.0"
