[package]
name = "beerus_cli"
description = "CLI for interacting with the Beerus Light Client"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
beerus_core.workspace = true
helios = { git = "https://github.com/a16z/helios" }
ethers = "1.0.2"
primitive-types = "0.11.1"
eyre = "0.6.8"
clap = { version = "4.0.22", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros"] }
log = "0.4.17"
env_logger = "0.10.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
serde_json = "1.0.91"
base64 = "0.20.0"
serde = "1.0.152"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
    "precommit-hook",
    "run-for-all",
    "run-cargo-clippy",
    "run-cargo-fmt",
]

[[bin]]
name = "beerus_cli"
path = "src/main.rs"
