[package]
name = "beerus_core"
description = "Core utilities of the Beerus Light Client"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true


[dependencies]
async-trait = "0.1.58"
helios = { git = "https://github.com/a16z/helios" }
ethers = "1.0.2"
primitive-types = "0.11.1"
eyre = "0.6.8"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
mockall = "0.11.3"
url = "2.3.1"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.21.2", features = ["macros"] }

[dev-dependencies]
httpmock = "0.6.7"
temp-env = "0.3.1"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
    "precommit-hook",
    "run-for-all",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
