[package]
name = "beerus_rest_api"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
beerus_core = { path = "../beerus_core" }
helios = { git = "https://github.com/a16z/helios" }
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "5c9a048f" }
primitive-types = "0.11.1"
eyre = "0.6.8"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.9.3"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.21.2", features = ["macros"] }
rocket_okapi = { git = "https://github.com/GREsau/okapi", rev = "b5b0a89b273f04342d1cb615fef0642beef33cef" }
schemars = "0.8.11"
