[package]
name = "beerus-cli"
description = "CLI for interacting with the Beerus Light Client"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
beerus-core = { path = "../beerus-core" }
helios = { git = "https://github.com/a16z/helios" }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
ethers = "1.0.2"
eyre = "0.6.8"
log = "0.4.14"
primitive-types = "0.11.1"
clap = { version = "4.0.22", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros"] }
env_logger = "0.10.0"
serde_json = "1.0.91"
base64 = "0.20.0"
serde = "1.0.152"
ethabi = "18.0.0"

[[bin]]
name = "beerus"
path = "src/main.rs"
