[package]
name = "beerus-cli"
description = "CLI for interacting with the Beerus Light Client"
version.workspace = true
edition.workspace = true

[dependencies]
beerus-core.workspace = true
helios.workspace = true
starknet.workspace = true
ethers.workspace = true
eyre.workspace = true
log.workspace = true
serde.workspace = true
primitive-types.workspace = true
clap = { version = "4.0.22", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros"] }
env_logger = "0.10.0"
serde_json = "1.0.91"
base64 = "0.20.0"
ethabi = "18.0.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"
assert_matches = "1.5.0"

[[bin]]
name = "beerus"
path = "src/main.rs"
