[package]
name = "beerus-core"
version = "0.1.0"
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
async-trait = "0.1.58"
helios = { git = "https://github.com/a16z/helios" }
ethers = "1.0.2"
primitive-types = "0.12.1"
eyre = "0.6.8"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
mockall = "0.11.3"
url = "2.3.1"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.21.2", features = ["macros"] }
clippy = "0.0.302"
log = "0.4"
futures = { version = "0.3", default-features = false }
gloo-timers = "0.2.6"
wasm-bindgen-futures = "0.4.33"
ethabi = "18.0.0"
toml = "0.7.3"


[dev-dependencies]
httpmock = "0.6.7"
temp-env = "0.3.1"
serial_test = "0.5.1"