[package]
name = "beerus-core"
description = "Core utilities for the Beerus Light Client"
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
helios.workspace = true
starknet.workspace = true
ethers.workspace = true
eyre.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
primitive-types.workspace = true
async-trait = "0.1.58"
serde_json = "1.0"
hex = "0.4.3"
mockall = "0.11.3"
url = "2.3.1"
tokio = { version = "1.21.2", features = ["macros"] }
futures = { version = "0.3", default-features = false }
ethabi = "18.0.0"
toml = "0.7.3"
shellexpand = "3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"
wasm-bindgen-futures = "0.4.33"

[dev-dependencies]
httpmock = "0.6.7"
serial_test = "1.0.0"
wasm-bindgen-test = "0.3.13"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
    "precommit-hook",
    "run-for-all",
    "run-cargo-fmt",
]
