[package]
name = "beerus-rpc"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
beerus-core = { path = "../beerus-core" }
helios = { git = "https://github.com/a16z/helios" }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
ethers = "1.0.2"
eyre = "0.6.8"
log = "0.4.14"
primitive-types = "0.11.1"
jsonrpsee = { version = "^0.16", features = ["full"] }
thiserror = "1.0.26"
dotenv = "0.15.0"
tokio = { version = "1.8.1", features = ["full"] }
serde_json = "1.0.64"
env_logger = "0.10.0"
anyhow = "1.0.69"
wiremock = "0.5.17"
serde = "1.0.152"
reqwest = "0.11.13"
