[package]
name = "beerus-rpc"
description = "JSON-RPC server for the Beerus Light Client"
version.workspace = true
edition.workspace = true

[dependencies]
beerus-core.workspace = true
starknet.workspace = true
ethers.workspace = true
eyre.workspace = true
log.workspace = true
serde.workspace = true
primitive-types.workspace = true
helios.workspace = true
jsonrpsee = { version = "0.16", features = ["full"] }
thiserror = "1.0.26"
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.64"
env_logger = "0.10.0"
anyhow = "1.0.69"
serde_with = "2.3.1"
hex = "0.4.3"

[dev-dependencies]
reqwest = "0.11.13"
wiremock = "0.5.17"

[[bin]]
name = "beerus-rpc"
path = "src/main.rs"
