[package]
description = "CLI for the Beerus Light Client"
edition = "2021"
name = "beerus-cli"
version = "0.3.0"

[[bin]]
name = "beerus"
path = "src/main.rs"

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
beerus-core = { path = "../core" }
beerus-rpc = { path = "../rpc" }
clap = { version = "4.4.7", features = ["derive"] }
tracing-subscriber.workspace = true
tracing.workspace = true