[package]
description = "CLI for the Beerus Light Client"
edition = "2021"
name = "beerus-cli"
version = "0.4.0"
default-run = "beerus"

[dependencies]
tokio = { workspace = true }
beerus-experimental-api = { path = "../experimental-api", optional = true }
beerus-core = { path = "../core" }
beerus-rpc = { path = "../rpc" }
clap = { version = "4.5.7", features = ["derive"] }
tracing-subscriber.workspace = true
tracing.workspace = true
eyre.workspace = true

[features]
default = []
experimental = ["beerus-experimental-api"]
