[package]
description = "Core utilities for the Beerus Light Client"
edition = "2021"
name = "beerus-core"
version = "0.4.0"

[package.metadata.cargo-udeps]
# Aquamarine generates Mermaid diagrams and causes a udeps false positive.
ignore = [["aquamarine"]]

[dependencies]
tokio = { workspace = true }
aquamarine = "0.5"
async-trait = "0.1.58"
bitvec = "1.0.1"
ethabi = "18.0.0"
ethers = "2.0.11"
eyre.workspace = true
helios = { git = "https://github.com/a16z/helios", tag = "0.5.4" }
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
serde_json = "1.0"
starknet-crypto = "0.6.1"

starknet.workspace = true
thiserror.workspace = true
toml = "0.7.3"
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.3.1"

[dev-dependencies]
rstest = "0.18.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"
wasm-bindgen-futures = "0.4.33"
