[package]
description = "A suite of integration tests to be run against a regular or experimental Beerus server"
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO Check if all are needed
# TODO Reorder
beerus-core = { path = "../core" }
starknet.workspace = true
eyre.workspace = true
jsonrpsee = { version = "0.20.3", features = ["macros", "server", "server-core"] }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true

cached = "0.49.3"
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"
reqwest = "0.11.16"
serde_json = "1.0"
tokio.workspace = true