[package]
description = "A suite of integration tests to be run against a regular or experimental Beerus server"
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO Check if all are needed
# TODO Reorder
beerus-core = { path = "../core" }
cached = "0.49.3"
starknet.workspace = true
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"
reqwest = "0.11.16"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio.workspace = true