[package]
description = "A suite of integration tests to be run against a regular or experimental Beerus server"
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# The integration tests are disabled by default so a simple `cargo test` doesn't require
# running a server in the background.
enabled = []

[dev-dependencies]
beerus-core = { path = "../core" }
beerus-experimental-api = { path = "../experimental-api" }
cached = "0.49.3"
iamgroot = { git = "https://github.com/sergey-melnychuk/iamgroot", tag = "v0.2.2" }
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"
reqwest = "0.11.16"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
starknet.workspace = true
starknet_api = "0.10.0"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true