[package]
description = "JSON-RPC server for the Beerus Light Client"
edition = "2021"
name = "beerus-rpc"
version = "0.4.0"

[dependencies]
beerus-core = { path = "../core" }
starknet.workspace = true
eyre.workspace = true
jsonrpsee = { version = "0.20.3", features = ["macros", "server", "server-core"] }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json = "1.0"
