[package]
description = "JSON-RPC server for the Beerus Light Client"
edition = "2021"
name = "beerus-rpc"
version = "0.4.0"

[features]
integration-tests = ["pretty_assertions", "reqwest", "serde_json", "tokio"]

[dependencies]
beerus-core = { path = "../core" }
starknet.workspace = true
eyre.workspace = true
jsonrpsee = { version = "0.20.3", features = ["macros", "server", "server-core"] }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Integration test dependencies
pretty_assertions = { version = "1.4.0", optional = true }
reqwest = { version = "0.11.16", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { workspace = true, optional = true }
