[package]
description = "JSON-RPC server for the Beerus Light Client"
edition = "2021"
name = "beerus-rpc"
version = "0.4.0"

[dependencies]
beerus-core = { path = "../core" }
starknet.workspace = true
eyre.workspace = true
jsonrpsee = { version = "0.22.4", features = [
    "macros",
    "server",
    "server-core",
] }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
reqwest = "0.12.3"
serde_json = "1.0"
tokio.workspace = true
futures = "0.3.30"
pin-utils = "0.1.0"
