[package]
description = "Examples for the Beerus Light Client"
edition = "2021"
name = "example"
version = "0.3.0"

[dependencies]
starknet.workspace = { path = "../../" }
beerus-core = { path = "../../crates/core"}
tracing.workspace = { path = "../../" }
tracing-subscriber = "0.3.17"
eyre = "0.6.8"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[[example]]
name = "basic"
path = "basic.rs"

[[example]]
name = "call"
path = "call.rs"
