[package]
name = "beerus-wasm"
description = "Web Assembly bindings for the Beerus Light Client"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
beerus-core = { path = "../../crates/core", default-features = false }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
