[package]
name = "beerus-web"
version = "0.1.0"
edition = "2021"
description = "WebAssembly light client for Starknet"
repository = "https://github.com/eigerco/beerus"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beerus = { path = "../..", default-features = false }
reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
serde = "1.0.209"
serde_json = "1.0.127"

tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }

wasm-timer = "0.2.5"
web-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.37"

ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "3bf1a9e0d698e9fdfc91d0353878901af5a5c5ef" }
helios = { git = "https://github.com/sergey-melnychuk/helios", branch = "beerus-wasm", default-features = false, features = ["beerus-wasm"] }
js-sys = "0.3.70"
