[package]
name = "beerus-web"
version = "0.1.0"
edition = "2021"
description = "WebAssembly light client for Starknet"
repository = "https://github.com/eigerco/beerus"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beerus = { path = "../..", default-features = false }
reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
serde = "1.0.209"
serde_json = "1.0.127"

tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }

js-sys = "0.3.70"
web-sys = { version = "0.3.69", features = ["console"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.37"

iamgroot = { git = "https://github.com/sergey-melnychuk/iamgroot", tag = "v0.2.8" }
async-trait = "0.1.82"
console_error_panic_hook = "0.1.7"

num-traits = "0.2.19"
num-bigint = "0.4.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
